acomodar imagen mail para outlook web y desactivar botones en cursos e instancias

--- a/public/css/cursos.css
+++ b/public/css/cursos.css
@@ -344,6 +344,8 @@ table thead th {
     opacity: 0.5;
     border: none;
     background: none;
+    margin: 5px; 
+    cursor: not-allowed;
 }
 
 #iconos-instancias {
