--- a/public/css/cursos.css
+++ b/public/css/cursos.css
@@ -451,11 +451,11 @@ table thead th {
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
     border: 1px solid #357AAB;
     color: rgba(255, 255, 255, 1);
-
+    padding:0px;
     font-size: 16px;
     border-radius: 5px;
     width: 150%;
-    height: 70px;
+    height: 37px;
     margin-left: 150px;
     margin-top: 85px;
 }
