--- a/public/css/encabezadoFooter.css
+++ b/public/css/encabezadoFooter.css
@@ -38,12 +38,13 @@ footer {
 
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     position: fixed;
     width: 100%;
     bottom: 0;
     font-family: 'Inter', sans-serif;
     font-weight: 200;
+    height: 50px;
 }
 
 footer p {
