--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -210,3 +210,23 @@ table thead th {
 #permisos-buscar {
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
 }
+
+
+/*RECEPCION*/
+#recepcion-nav{
+    margin-top: 130px;
+}
+#recepcion-nav button{
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+#recepcion-botones{
+    margin-bottom:20px;
+    
+}
+#recepcion-botones a{
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#recepcion-tabla{
+    margin-top:10px;
+}
