--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -546,10 +546,10 @@ nav {
 /* FOOTER */
 footer {
     background: linear-gradient(90deg, #1C547C 0%, #1E78C8 100%);
-
+height:50px;
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
     position: fixed;
     width: 100%;
     bottom: 0;
