--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -213,20 +213,93 @@ table thead th {
 
 
 /*RECEPCION*/
-#recepcion-nav{
+#recepcion-nav {
     margin-top: 130px;
 }
-#recepcion-nav button{
-    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
-}
-#recepcion-botones{
-    margin-bottom:20px;
-    
-}
-#recepcion-botones a{
+
+#recepcion-nav button {
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
 }
 
-#recepcion-tabla{
-    margin-top:10px;
+#recepcion-botones {
+    margin-bottom: 20px;
+
+}
+
+#recepcion-botones a {
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#recepcion-tabla {
+    margin-top: 10px;
+}
+
+
+
+/*EMPLEADOS*/
+#empleados-filtro {
+    margin-top: 10px;
+}
+
+#empleados-crear {
+    margin-top: 120px;
+    margin-left: 17px;
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#empleados-nav {
+    margin-top: -20px;
+}
+
+#empleados-buscar {
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#empleados-btn {
+    padding: 1px;
+    height: 25px;
+}
+
+.circle_green {
+    width: 20px;
+    height: 20px;
+    background-color: rgb(31, 224, 31);
+    border-radius: 50%;
+    display: inline-block;
+}
+
+.circle_grey {
+    width: 20px;
+    height: 20px;
+    background-color: grey;
+    border-radius: 50%;
+    display: inline-block;
+}
+
+#img-icono {
+    width: 25px;
+    height: 25px;
+    margin: 2px;
+}
+
+#icono {
+    border: none;
+    background: none;
+    padding: 0;
+}
+
+#icono-area {
+    border: none;
+    background: none;
+    padding: 0;
+    margin-top: -15px;
+}
+
+
+#empleados-cursos-conteiner {
+    margin-top: 100px;
+}
+
+#titulo-cursos-empleado {
+    text-align: center;
 }
