--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -205,10 +205,15 @@ table thead th {
 #permisos-crear {
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
     margin-bottom: 20px;
+    margin-top: -20px;
 }
 
 #permisos-buscar {
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#permisos-table {
+    margin-top: -30px;
 }
 
 
@@ -223,6 +228,7 @@ table thead th {
 
 #recepcion-botones {
     margin-bottom: 20px;
+    margin-top: -20px;
 
 }
 
@@ -231,7 +237,7 @@ table thead th {
 }
 
 #recepcion-tabla {
-    margin-top: 10px;
+    margin-top: -30px;
 }
 
 
@@ -302,4 +308,27 @@ table thead th {
 
 #titulo-cursos-empleado {
     text-align: center;
+}
+
+
+
+/*MEDICO*/
+#medico-nav {
+    margin-top: 100px;
+}
+
+#medico-nav a {
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#medico-nav button {
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#medico-table {
+    margin-top: -30px;
+}
+#medico-buttons{
+    
+    margin-bottom: 20px;
 }
