--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -292,6 +292,7 @@ table thead th {
     border: none;
     background: none;
     padding: 0;
+    cursor: pointer;
 }
 
 #icono-area {
@@ -328,7 +329,84 @@ table thead th {
 #medico-table {
     margin-top: -30px;
 }
-#medico-buttons{
-    
+
+#medico-buttons {
+
     margin-bottom: 20px;
+}
+
+.pagination {
+    margin-bottom: 20px;
+}
+
+
+/*GUARDIA*/
+#guardia-container {
+    margin-top: 120px;
+}
+
+#guardia-btn-visitantes {
+    margin-top: 80px;
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+    width: 150px;
+    height: 50px;
+    padding: 10px;
+}
+
+#div-alert {
+    display: block !important;
+    /* Fuerza la visualización */
+    margin-top: 20px;
+    padding: 10px;
+}
+
+.alert {
+    margin-top: 80px;
+}
+
+.alert {
+    display: block;
+    /* Asegura que las alertas sean visibles */
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+.alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+#listado-container {
+    margin-top: 120px;
+}
+
+#guardia-asignar-container {
+    margin-top: 130px;
+}
+
+#guardia-asignar-formulario {
+    display: flex;
+    justify-content: center;
+    /* Centra horizontalmente */
+    align-items: center;
+    /* Centra verticalmente */
+
+}
+
+#asignar-btn {
+    background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+#guardia-consulta-container {
+    margin-top: 120px;
+}
+
+#guardia-consulta-table {
+    margin-top: -30px;
 }
