--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -286,7 +286,7 @@ table thead th {
     width: 25px;
     height: 25px;
     margin: 2px;
-    
+
 }
 
 #icono {
@@ -430,21 +430,31 @@ table thead th {
     margin-top: -20px;
 
 }
-#documentos-proyectos-container{
+
+#documentos-proyectos-container {
     margin-top: 110px;
 }
 
-#proyectos-btn-agregar{
+#proyectos-btn-agregar {
     margin-bottom: 20px;
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
 }
-#proyectos-table{
-    margin-top:-30px;
+
+#proyectos-table {
+    margin-top: -30px;
 }
-#documentos-instructivos-container{
-    margin-top:110px;
+
+#documentos-instructivos-container {
+    margin-top: 110px;
 }
-#instructivos-btn-agregar{
+
+#instructivos-btn-agregar {
     margin-bottom: 15px;
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+}
+
+
+/*NOVEDADES*/
+#novedades-container {
+    margin-top: 100px;
 }
