--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -4,6 +4,13 @@
     box-sizing: border-box;
 }
 
+#img-icono-user {
+    width: 40px;
+    height: 40px;
+    margin: 2px;
+
+}
+
 /* Estilos del encabezado */
 .header-icon {
     position: absolute;
@@ -546,7 +553,7 @@ nav {
 /* FOOTER */
 footer {
     background: linear-gradient(90deg, #1C547C 0%, #1E78C8 100%);
-height:50px;
+    height: 50px;
     color: white;
     text-align: center;
     padding: 10px;
