--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,7 +49,7 @@ table thead {
 table thead th {
     font-family: 'Inter', sans-serif;
     font-size: 16px;
-    font-weight: 800;
+    font-weight: 750;
     line-height: 19.2px;
     letter-spacing: -0.03em;
     text-align: center !important;
@@ -206,6 +206,7 @@ table thead th {
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
     margin-bottom: 20px;
     margin-top: -20px;
+    font-size: 17px;
 }
 
 #permisos-buscar {
@@ -251,6 +252,7 @@ table thead th {
     margin-top: 120px;
     margin-left: 17px;
     background: linear-gradient(90deg, #206190 0%, #357AAB 44.5%, #3D83B5 54%, #5098CD 100%);
+    font-size: 17px;
 }
 
 #empleados-nav {
@@ -265,6 +267,7 @@ table thead th {
     padding: 1px;
     height: 25px;
 }
+
 
 .circle_green {
     width: 20px;
@@ -462,6 +465,10 @@ table thead th {
 /*NOVEDADES EDIT*/
 #novedades-edit-container {
     margin-top: 110px;
+}
+
+#novedades-crear{
+    font-size: 17px;
 }
 
 /*EQUIPAMIENTO*/
