--- a/public/css/principal-nueva.css
+++ b/public/css/principal-nueva.css
@@ -306,11 +306,13 @@ nav {
     margin-left: 131px;
 }
 
-.authenticated .nav {}
+.authenticated nav {
+    margin-top: 115px;
+}
 
 /*LUEGO DE LOGUEARSE*/
 .authenticated .nav-btn {
-    margin-top: -25px;
+    margin-top: -17px;
 }
 
 .authenticated .nav-grid {
@@ -321,7 +323,7 @@ nav {
 
 .authenticated .nav-grid a {
     /*botones del grid*/
-    margin-top: -7px;
+    margin-top: 1px;
     gap: 2px;
 }
 
@@ -349,7 +351,7 @@ nav {
 
 .authenticated .carousel-container {
     height: 550px;
-    margin-top: -315px;
+    margin-top: -310px;
 
 }
 
@@ -504,6 +506,10 @@ nav {
     font-family: Arial;
 }
 
+.authenticated .novedades h1 {
+    margin-top: 65px;
+}
+
 .cards-contenedor {
     display: flex;
     justify-content: space-between;
@@ -513,6 +519,10 @@ nav {
     margin-top: 10px;
     margin-left: -150px;
     width: 110%;
+}
+
+.authenticated .cards-contenedor {
+    margin-top: 2px;
 }
 
 .card {
@@ -625,16 +635,17 @@ footer p {
         height: 330px;
     }
 
-    .authenticated .cards-contenedor{
+    .authenticated .cards-contenedor {
         display: flex;
         flex-wrap: nowrap;
         justify-content: flex-start;
         gap: 0px;
         margin-left: -75px;
         width: 85%;
-        margin-top: -8px;
+        margin-top: 7px;
         gap: 17px;
     }
+
     .authenticated .card {
         width: 235px;
         margin: 0;
@@ -643,12 +654,34 @@ footer p {
         height: 330px;
     }
 
+    .authenticated .novedades h1 {
+        margin-top: 75px;
+    }
+
     .cards-contenedor .card:first-child {
         margin-left: 0;
     }
 
     .cards-contenedor .card:last-child {
         margin-right: 0;
+    }
+
+    .botones-cards {
+        display: flex;
+        flex-wrap: wrap;
+        /* Permite que los botones se ajusten cuando no hay suficiente espacio */
+        gap: 0px;
+        /* Espaciado entre los botones */
+        justify-content: center;
+        /* Alinea los elementos a la izquierda (puedes cambiarlo a 'center' si prefieres alineación centrada) */
+    }
+
+    .botones-cards>div {
+        display: flex;
+        flex-wrap: wrap;
+        /* Asegura que los botones dentro de cada div también se ajusten si es necesario */
+        gap: 1px;
+        /* Espaciado entre los botones dentro de cada div */
     }
 
     .login {
@@ -700,22 +733,41 @@ footer p {
         height: 330px;
     }
 
-    .authenticated .cards-contenedor{
+    .authenticated .cards-contenedor {
         display: flex;
         flex-wrap: nowrap;
         justify-content: flex-start;
         gap: 0px;
         margin-left: -75px;
         width: 85%;
-        margin-top: -8px;
+        margin-top: 5px;
         gap: 17px;
     }
+
     .authenticated .card {
         width: 235px;
         margin: 0;
         padding: 0;
         box-sizing: border-box;
         height: 330px;
+    }
+
+    .botones-cards {
+        display: flex;
+        flex-wrap: wrap;
+        /* Permite que los botones se ajusten cuando no hay suficiente espacio */
+        gap: 0px;
+        /* Espaciado entre los botones */
+        justify-content: center;
+        /* Alinea los elementos a la izquierda (puedes cambiarlo a 'center' si prefieres alineación centrada) */
+    }
+
+    .botones-cards>div {
+        display: flex;
+        flex-wrap: wrap;
+        /* Asegura que los botones dentro de cada div también se ajusten si es necesario */
+        gap: 1px;
+        /* Espaciado entre los botones dentro de cada div */
     }
 
     .cards-contenedor .card:first-child {
@@ -780,7 +832,7 @@ footer p {
         justify-content: flex-start;
         margin-left: -130px;
         width: 80%;
-        margin-top: -8px;
+        margin-top: 10px;
         gap: 10px;
     }
 
@@ -790,6 +842,24 @@ footer p {
         padding: 0;
         box-sizing: border-box;
         height: 330px;
+    }
+
+    .botones-cards {
+        display: flex;
+        flex-wrap: wrap;
+        /* Permite que los botones se ajusten cuando no hay suficiente espacio */
+        gap: 0px;
+        /* Espaciado entre los botones */
+        justify-content: center;
+        /* Alinea los elementos a la izquierda (puedes cambiarlo a 'center' si prefieres alineación centrada) */
+    }
+
+    .botones-cards>div {
+        display: flex;
+        flex-wrap: wrap;
+        /* Asegura que los botones dentro de cada div también se ajusten si es necesario */
+        gap: 1px;
+        /* Espaciado entre los botones dentro de cada div */
     }
 
     .cards-contenedor .card:first-child {
@@ -807,6 +877,10 @@ footer p {
     .carousel-container {
         width: 875px;
         margin-left: 335px;
+    }
+
+    .authenticated .novedades h1 {
+        margin-top: 80px;
     }
 
     .titulo-novedades {
