exportar archivo excel y generar certificado de cursos desde empleados.cursos

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -23,6 +23,38 @@
 }
 
 
+#custom-btn {
+    background: linear-gradient(90deg, rgba(199, 218, 233, 0.88) 0%, #5098CD 0.01%, #357AAB 46.5%, #3D83B5 85.5%);
+    width: Hug (126px)px;
+    height: Hug (33px)px;
+    top: 20px;
+    left: 20px;
+    padding: 8px 12px 8px 12px;
+    gap: 10px;
+    border-radius: 8px;
+    opacity: 0px;
+    box-shadow: 0px 4px 4.6px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    font-family: Calibri, sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 16.8px;
+    letter-spacing: -0.03em;
+    text-align: center;
+    text-underline-position: from-font;
+    text-decoration-skip-ink: none;
+    color: rgba(245, 245, 245, 1);
+}
+
+#custom-btn:hover {
+    background: var(--HOVER, rgba(33, 102, 153, 1));
+
+}
+
+#custom-btn:active {
+    background: rgba(100, 161, 206, 1);
+
+}
 
 .table-container {
     padding-bottom: 50px;
@@ -269,6 +301,8 @@ table thead th {
 }
 
 
+
+
 .circle_green {
     width: 20px;
     height: 20px;
@@ -467,7 +501,7 @@ table thead th {
     margin-top: 110px;
 }
 
-#novedades-crear{
+#novedades-crear {
     font-size: 17px;
 }
 
